--- a/templates/torneo/portada.html.twig
+++ b/templates/torneo/portada.html.twig
@@ -22,6 +22,7 @@
             width: 100%;
             height: 100vh;
             overflow: hidden;
+            
         }
 
         .portada img {
@@ -60,12 +61,31 @@
             background-color: #d62828;
         }
 
+.demo-label {
+    position: absolute;
+    top: 10px;
+    left: -30px;
+    background: #ffcc00;
+    color: #000;
+    padding: 5px 40px;
+    transform: rotate(-45deg);
+    font-weight: bold;
+    font-size: 14px;
+    z-index: 1000;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}        
+
     
     </style>
 </head>
 <body>
 
+        {% if torneo.demo  %}
+            <div class="demo-label">DEMO</div>
+        {% endif %}    
+
     <div class="portada">
+
         <img src="{{ asset('images/Portada-verina_alevin_futbol_11v2.png') }}" alt="Portada torneo Veriña C.F.">
         <div class="overlay">
             <a class="boton-entrar" href="{{ path('torneo_entrada', { slug: torneo.slug }) }}">
