--- a/templates/basetorneo.html.twig
+++ b/templates/basetorneo.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mi Torneo{% endblock %}</title>
+    <title>{% block title %}{{ torneo.nombre }}{% endblock %}</title>
 
     {# Bootstrap 5 CSS #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
     {% block stylesheets %}{% endblock %}
+
 </head>
 <body class="bg-light">
 
-    <header class="container my-3">
+
         {% block header %}
-            <h1 class="text-center">🏆 Mi Torneo</h1>
+            <h1 class="text-center pd5">🏆 {{torneo.nombre}}</h1>
         {% endblock %}
-    </header>
+
 
     <main class="container">
     {% block barra_superior %}
